Bug Fix #1