@@ -25,7 +25,6 @@ import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.sounds.SoundEvent;
-import net.minecraft.sounds.Music;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
@@ -35,16 +34,11 @@ import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 import net.minecraft.data.BuiltinRegistries;
 import net.minecraft.core.Registry;
 
-import net.mcreator.bixbyanimals.world.features.treedecorators.ExoticaForestTrunkDecorator;
-import net.mcreator.bixbyanimals.world.features.treedecorators.ExoticaForestLeaveDecorator;
-import net.mcreator.bixbyanimals.world.features.treedecorators.ExoticaForestFruitDecorator;
 import net.mcreator.bixbyanimals.init.BixbyAnimalsModEntities;
 import net.mcreator.bixbyanimals.init.BixbyAnimalsModBlocks;
 import net.mcreator.bixbyanimals.init.BixbyAnimalsModBiomes;
 
 import java.util.List;
-
-import com.google.common.collect.ImmutableList;
 
 public class ExoticaForestBiome {
 	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(-0.142857142857f, 0.142857142857f),
@@ -55,22 +49,15 @@ public class ExoticaForestBiome {
 	public static Biome createBiome() {
 		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-13421569).waterColor(-16724788).waterFogColor(329011)
 				.skyColor(-13421569).foliageColorOverride(10387789).grassColorOverride(-10040065)
-				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("bixby_animals:exoticaforestmusic")), 12000, 24000, true)).build();
+				.ambientLoopSound(new SoundEvent(new ResourceLocation("bixby_animals:exoticaforestmusic"))).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("bixby_animals:tree_exotica_forest",
-						FeatureUtils.register("bixby_animals:tree_exotica_forest", Feature.TREE,
-								new TreeConfiguration.TreeConfigurationBuilder(
-										BlockStateProvider.simple(BixbyAnimalsModBlocks.EXOTIC_WOOD_LOG.get().defaultBlockState()),
-										new StraightTrunkPlacer(7, 2, 0),
-										BlockStateProvider.simple(BixbyAnimalsModBlocks.EXOTIC_WOOD_LEAVES.get().defaultBlockState()),
-										new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
-										.decorators(ImmutableList.of(ExoticaForestLeaveDecorator.INSTANCE, ExoticaForestTrunkDecorator.INSTANCE,
-												ExoticaForestFruitDecorator.INSTANCE))
-										.build()),
-						List.of(CountPlacement.of(15), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
-								BiomeFilter.biome())));
+		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("bixby_animals:tree_exotica_forest",
+				FeatureUtils.register("bixby_animals:tree_exotica_forest", Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(
+						BlockStateProvider.simple(BixbyAnimalsModBlocks.EXOTIC_WOOD_LOG.get().defaultBlockState()), new StraightTrunkPlacer(7, 2, 0),
+						BlockStateProvider.simple(BixbyAnimalsModBlocks.EXOTIC_WOOD_LEAVES.get().defaultBlockState()),
+						new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build()),
+				List.of(CountPlacement.of(15), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("bixby_animals:grass_exotica_forest", VegetationFeatures.PATCH_GRASS,
 						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
